--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,17 +19,31 @@ services:
     container_name: redis
     image: redis:5.0
     restart: always
-    ports:
-      - 6379:6379
     command: redis-server --requirepass ${REDIS_PASSWORD}
+    ports:
+      - 6379:6379 # опционально; можно убрать, если порт наружу не нужен
     volumes:
       - redis_data:/data
+    networks:
+      - stream-backend
+
+  redisinsight:
+    container_name: redisinsight
+    image: redis/redisinsight:latest
+    restart: always
+    ports:
+      - 5540:5540 # UI будет доступен на http://localhost:8001
+    depends_on:
+      - redis
+    volumes:
+      - redisinsight_data:/db # сохранит историю подключений/настроек
     networks:
       - stream-backend
 
 volumes:
   postgres_data:
   redis_data:
+  redisinsight_data:
 
 networks:
   stream-backend:
